k8s/ingress/ssok-monitoring/base/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssok-monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: ssok-group
    alb.ingress.kubernetes.io/subnets: subnet-0477299d6297b7a52,subnet-05bce5c34c2186ef4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:635091448057:certificate/eae8096f-587b-4bd8-9427-48735783d857
    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  rules:
    - host: metric.ssok.kr
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-kube-prom-prometheus
                port:
                  number: 9090
          - path: /alertmanager
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-kube-prom-alertmanager
                port:
                  number: 9093
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-stack-grafana
                port:
                  number: 80
